--- a/gb/22/10/9/n13841959.md
+++ b/gb/22/10/9/n13841959.md
@@ -14,9 +14,9 @@
 <p>视频中，一名乌克兰士兵手持步枪处于警戒状态，另一名士兵手持EDM4S反无人机枪捕捉到上空的一架无人机。该无人机缓缓下落到一定高度时，警戒的士兵上前控制住这架无人机。</p>
 <p>大纪元无法独立核实上述视频的真实性。</p>
 <blockquote class="twitter-tweet" data-width="550">
-<p lang="en" dir="ltr">Soldiers of the AFU &quot;landed&quot; a <ahref="https://twitter.com/hashtag/Russian?src=hash&amp;ref_src=twsrc%5Etfw">#Russian</a> drone DJI Mavic pro with an EDM4S anti-drone gun. <ahref="https://t.co/i5thHBXmqS"></a><a href="https://d1znr9c9sm73cv.cloudfront.net/H6z&#29983i5thHBXmqS</a></p>
+<p lang="en" dir="ltr">Soldiers of the AFU &quot;landed&quot; a <ahref="https://twitter.com/hashtag/Russian?src=hash&amp;ref_src=twsrc%5Etfw">#Russian</a> drone DJI Mavic pro with an EDM4S anti-drone gun. <ahref="https://t.co/i5thHBXmqS"></a><a href="https://d1ff3ajoaf61nd.cloudfront.net/Z6aeMCTjt"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="i5thHBXmqS</a></p>
 <p>&mdash; NEXTA (@nexta_tv) <ahref="https://twitter.com/nexta_tv/status/1577728579772846102?ref_src=twsrc%5Etfw">October 5, 2022</a></p></blockquote>
-<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></p>
+<p></p>
 <p>消息在网络上引发关注。有网民说，乌克兰士兵使用这款的反无人机利器，是立陶宛NT Service公司提供的对无人机实施电子压制的手持式系统EDM4S-UA。据《Intelligence Online》的信息，以色列Skylock公司是EDM4S系统的研制者，隶属于Avnon集团，专门研制电子对抗系统。</p>
 <p>还有网民表示，乌克兰士兵捕获的这架无人机，是中国科技公司大疆创新科技有限公司（DJI，简称“大疆”）生产的四轴无人机，该机型使用的是瑞典胶卷照相机生产商哈苏（Hasselblad）生产的航拍相机，飞行时间40余分钟，视频传输距离15公里。</p>
 <figure id="attachment_13841984" aria-describedby="caption-attachment-13841984" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/10/id13841984-Blank-4-Grids-Collage-e1665348478162.jpeg"><img decoding="async" class="size-full wp-image-13841984" src="https://i.epochtimes.com/assets/uploads/2022/10/id13841984-Blank-4-Grids-Collage-e1665348478162.jpeg" alt="" width="500" b="500" /></a><figcaption id="caption-attachment-13841984" class="wp-caption-text">乌克兰军方成功捕获一架大疆无人机，在微博上引发关注和热议。（视频截图）</figcaption></figure>
@@ -27,37 +27,34 @@
 <p>2020年12月，出于国家安全考虑，美国商务部宣布把大疆等数十家中企列入贸易管制黑名单。</p>
 <p>早在2017年，美国陆军实验室和美国海军曾于2017年发现大疆无人机存在“运作风险”（收集地理资讯、影音等敏感资料），要求美军停止、移除大疆设备，卸除电池、存储媒介。</p>
 <p>责任编辑：胡宇龙</p>
-	
-<hr>
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/2/25/n13605797.md#1">俄侵乌中共态度暧昧 中乌友好条约成“废纸”？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/3/n13620188.md#1">中共官媒否认俄军枪杀四名中国留学生后删文</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/10/n13637070.md#1">【一线采访】中共谎言被戳破 看台泰印如何撤侨</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/18/n13656831.md#1">微信“报平安”令北京忌惮 乌华人账号全被删</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/24/n11208751.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(4)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/25/n10932219.md#1" target="_blank">褒奖法轮功 推崇普世价值</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/18/n10648920.md#1" target="_blank">俞心诚：凯撒之死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/17/n11800547.md#1" target="_blank">新年集体炼功交流 法轮功修炼者遍及俄罗斯</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299288.md#1">【未解之谜】多个预言印证? 2025年有巨变 日台要小心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300810.md#1">【未解之谜】日本最强预言：三千世界面临大清洗 人神历劫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298593.md#1">命大的人：穿越迫害的神韵艺术家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300734.md#1">目睹临终病患与亡者对话 护士质疑无神论</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276176.md#1">【古道人生】徒弟偷了师父剑谱 结局意外曲折</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14301964.md#1">【全球新闻】以色列突袭黎巴嫩首都</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14301749.md#1">【新闻欣视角】中将关凯突离世 内幕离奇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14301967.md#1">【晚间新闻】台湾正式加入IPAC 首度在台办峰会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300974.md#1">中国钢铁巨头倒闭 顶级大宗商品交易商受拖累</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301420.md#1">湖南娄底现彭立发第二 拉横幅放广播反共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298617.md#1">中共中将关凯突然去世 网络热传死因</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14301011.md#1">迪丽热巴新剧造型引热议 生活习惯获赞超自律</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300721.md#1">《泪之女王》的“金阳基”文太裕10月结婚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301674.md#1">新剧获发行许可 杨颖遭封杀一年后正式解封？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/28/n14300090.md#1">《惊奇四超人：第一阶段》不讲起源讲新故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300572.md#1">台剧《零日攻击》前导片引热议 国际媒体关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300623.md#1">大陆网红连吃10小时猝死 专家谈吃播的危险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301277.md#1">你会晕船吗？ 游轮专家教你挑选正确舱房</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298182.md#1">阳台种菜培育秘诀 新手也能四季都丰收</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14297076.md#1">不知不觉间一直中毒！生活中恐怖5大慢性中毒源</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300956.md#1">豌豆与胡萝卜哪一个更健康 营养师怎么说</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544926.md#1">【纪元焦点】南航机长用生命反抗职场霸凌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543479.md#1">砸钱也没用 中共这些技术被“卡脖子”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543820.md#1">广东制造业陷寒冬 老牌厂知名外企宣告结业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543930.md#1">人民日报刊文纪念李克强冥诞 求是网删文</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543281.md#1">刘晓庆珠宝公司因民间借贷纠纷被执行44.9万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543287.md#1">综艺《出去一下》将开播 舒华、桂纶镁同台亮相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539895.md#1">强化免疫有三关 中医从脏腑打造防御屏障</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/9/n13841959.htm">网传乌克兰士兵捕获俄军使用的大疆无人机</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/10/9/n13841959.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
